--- a/snippets/head.liquid
+++ b/snippets/head.liquid
@@ -452,7 +452,7 @@
     --FONT-WEIGHT-NAV: 400;
     --FONT-WEIGHT-NAV-BOLD: 700;
     --FONT-STYLE-NAV: {{ nav_font.style }};
-    --FONT-SIZE-NAV: {{ settings.nav_font_size | append: 'px' }};
+    --FONT-SIZE-NAV: {{ settings.nav_font_size | append: 'rem' }};
 
 
     --LETTER-SPACING-NAV: {{ settings.nav_letter_spacing | divided_by: 1000.0 | append: 'em' }};
