--- a/snippets/header-icon.liquid
+++ b/snippets/header-icon.liquid
@@ -20,5 +20,7 @@
     {%- render 'icon-cart' -%}
   {%- when 'icon-bag' -%}
     {%- render 'icon-bag' -%}
+  {%- when 'icon-new-cart' -%}
+    {%- render 'icon-new-cart' -%}
 {%- endcase -%}
 
