--- a/snippets/icon-profile-circled.liquid
+++ b/snippets/icon-profile-circled.liquid
@@ -1,1 +1,13 @@
-<svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-profile-circled" viewBox="0 0 24 24"><path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"/><path d="M4.271 18.346S6.5 15.5 12 15.5s7.73 2.846 7.73 2.846M12 12a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"/></svg>
+{% comment %} <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-profile-circled" viewBox="0 0 24 24"><path d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"/><path d="M4.271 18.346S6.5 15.5 12 15.5s7.73 2.846 7.73 2.846M12 12a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" stroke="#000" stroke-linecap="round" stroke-linejoin="round"/></svg> {% endcomment %}
+
+<svg width="22" height="26" viewBox="0 0 22 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <circle cx="11.2" cy="7.13333" r="6.13333" stroke="black" stroke-width="1.3"/>
+  <path 
+    d="M20.4 24.0005C20.4 19.9572 18.2084 17.8672 11.2 17.8672C4.19158 17.8672 2 19.9572 2 24.0005" 
+    fill="none" 
+    stroke="black" 
+    stroke-width="1.3" 
+    stroke-linecap="round"
+  />
+</svg>
+
