Add font awesome

--- a/snippets/head.liquid
+++ b/snippets/head.liquid
@@ -9,6 +9,7 @@
 
   <meta name="theme-color" content="{{ scheme_accent }}">
   <link rel="canonical" href="{{ canonical_url }}">
+  {{ 'fa.min.css' | asset_url | stylesheet_tag }}
 
   <!-- ======================= 01 Theme V6.0.2 ========================= -->
 
