--- a/snippets/font-pp-eiko.liquid
+++ b/snippets/font-pp-eiko.liquid
@@ -9,6 +9,13 @@
   @font-face {
     font-family: 'PP Eiko';
     font-style: normal;
+    font-weight: 400;
+    src: local('PP Eiko Regular'), url({{ 'PPEiko-Regular.woff' | asset_url }}) format('woff');
+  }
+
+  @font-face {
+    font-family: 'PP Eiko';
+    font-style: normal;
     font-weight: 500;
     src: local('PP Eiko Medium'), url({{ 'PPEiko-Medium.woff' | asset_url }}) format('woff');
   }
