--- a/sections/section-multicolumn.liquid
+++ b/sections/section-multicolumn.liquid
@@ -222,6 +222,33 @@
         ]
       },
       {
+        "type": "faq",
+        "name": "FAQ",
+        "settings": [
+          {
+            "type": "range",
+            "id": "column_width",
+            "label": "Column width",
+            "unit": "%",
+            "min": 10,
+            "max": 100,
+            "step": 1,
+            "default": 33,
+            "info": "Desktop only"
+          },
+          {
+            "type": "text",
+            "id": "title",
+            "label": "Title"
+          },
+          {
+            "type": "text",
+            "id": "text",
+            "label": "Text"
+          }
+        ]
+      },
+      {
         "type": "image",
         "name": "Image",
         "settings": [
