Force Redirection to product page - just for demo

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -77,6 +77,13 @@
     }
   </script>
 
+  {% if request.path != '/products/og-12-pack' %}
+    <script>
+      window.location.href = "/products/og-12-pack";
+    </script>
+  {% endif %}
+
+
   <!-- And above this comment line ================================================== -->
 </body>
 </html>
